SUBDIRS = . src man
AUTOMAKE_OPTIONS = foreign
EXTRA_DIST = etc/xinetd.d/ziproxy etc/ziproxy/ziproxy.conf etc/ziproxy/noprocess.list etc/ziproxy/replace.list etc/ziproxy/bo_exception.list etc/ziproxy/http.passwd etc/ziproxy/replace_ct.list etc/ziproxy/deny.list etc/ziproxy/change_tos.list etc/init.d/ziproxy bootstrap config README README.tools JPEG2000.txt
