SUBDIRS = tools

bin_PROGRAMS = ziproxy

if COMPILE_JP2_SUPPORT
ziproxy_SOURCES = ziproxy.c http.c http.h log.c log.h text.c text.h image.c image.h cfgfile.c cfgfile.h config.h preemptdns.c preemptdns.h netd.c htmlopt.h htmlopt.c qparser.c qparser.h gzpipe.c gzpipe.h fstring.c fstring.h cdetect.c cdetect.h urltables.c urltables.h txtfiletools.c txtfiletools.h auth.c auth.h strtables.c strtables.h simplelist.c simplelist.h tosmarking.c tosmarking.h cttables.c cttables.h misc.c misc.h session.c session.h globaldefs.h jp2tools.c jp2tools.h
else
ziproxy_SOURCES = ziproxy.c http.c http.h log.c log.h text.c text.h image.c image.h cfgfile.c cfgfile.h config.h preemptdns.c preemptdns.h netd.c htmlopt.h htmlopt.c qparser.c qparser.h gzpipe.c gzpipe.h fstring.c fstring.h cdetect.c cdetect.h urltables.c urltables.h txtfiletools.c txtfiletools.h auth.c auth.h strtables.c strtables.h simplelist.c simplelist.h tosmarking.c tosmarking.h cttables.c cttables.h misc.c misc.h session.c session.h globaldefs.h
endif

